--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -31,29 +31,29 @@
 {% endmacro %}
 
 {% macro render_project_local_nav(project, active_link, current_user, pro_features) -%}
-<ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix-top">
 {% if ( current_user.is_authenticated() and current_user.id == project.owner_id
-and current_user.pro) or current_user.admin %}
+    and current_user.pro) or current_user.admin %}
+<ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix-top">
     <li class="nav-link"><a href="{{url_for('project.new')}}">New</a></li>
     <li class="nav-link"><a href="{{ url_for('account.projects', name=current_user.name) }}">Open</a></li>
+    {% if project %}
     <li class="divider"></li>
     <li class="nav-link"><a href="{{url_for('project.tasks', short_name=active_project)}}">Dashboard</a></li>
-
     <li class="nav-link{% if active_link=="update"%} active{% endif %}">
         <a href="{{url_for('project.update', short_name=active_project)}}"> Project Details</a>
     </li>
 
-    {% if pro_features.get('auditlog_enabled') %}
-    <li class="nav-link{% if active_link=="auditlog"%} active{% endif %}">
-        <a href="{{url_for('project.auditlog', short_name=project.short_name)}}"> Audit Logs</a>
-    </li>
-    {% endif %}
+        {% if pro_features.get('auditlog_enabled') %}
+        <li class="nav-link{% if active_link=="auditlog"%} active{% endif %}">
+            <a href="{{url_for('project.auditlog', short_name=project.short_name)}}"> Audit Logs</a>
+        </li>
+        {% endif %}
 
-    {% if pro_features.get('webhooks_enabled') %}
-    <li class="nav-link{% if active_link=="webhook"%} active{% endif %}">
-        <a href="{{url_for('project.webhook_handler', short_name=project.short_name)}}"> Webhooks</a>
-    </li>
-    {% endif %}
+        {% if pro_features.get('webhooks_enabled') %}
+        <li class="nav-link{% if active_link=="webhook"%} active{% endif %}">
+            <a href="{{url_for('project.webhook_handler', short_name=project.short_name)}}"> Webhooks</a>
+        </li>
+        {% endif %}
 
     <li class="nav-link{% if active_link=="blog"%} active{% endif %}">
         <a href="{{url_for('project.show_blogposts', short_name=project.short_name)}}"> Blog</a>
@@ -65,11 +65,13 @@ and current_user.pro) or current_user.admin %}
         <a href="{{url_for('project.show_stats', short_name=active_project)}}"> Statistics</a>
     </li>
     {% endif %}
-
+{% elif project %}
+<ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix-top">
     <li class="nav-link{% if active_link=="contribute"%} active{% endif %}">
         <a href="{{url_for('project.presenter', short_name=active_project)}}"> Contribute</a>
     </li>
 </ul>
+{% endif %}
 {% endmacro %}
 
 {% macro render_project_summary(project, n_tasks, overall_progress, last_activity, current_user, upload_method) -%}
