--- a/templates/projects/project.html
+++ b/templates/projects/project.html
@@ -1,15 +1,158 @@
-<!DOCTYPE HTML>
-    
-    project.short_name
- 
-<meta charset="UTF-8">
-<meta http-equiv="refresh" content="1; url={{ url_for('blplugin.details', short_name = project.short_name) }}">
+{% extends "/base.html" %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
+{% from "admin/_helpers.html" import render_local_nav %}
+{% set has_splash = "true" %}
+{% set description = project.description %}
 
- 
+{% block content %}
+{% if project %}
+    {% include "_flash_messages_floating.html" %}
+    <div class="splash" id="project-splash" data-splash="{{ url_for('uploads.uploaded_file', filename=(project.info.container + '/' + project.info.splash))}}">
+        <div class="vcenter hcenter position-relative" style="height:100%;">
+            <div class="container text-center ie-mid-vcenter padding-top">
+                <div class="container-padded">
+                    <h1>{{ helper.render_project_title(project, upload_method) }}</h1>
+                    <h2>{{ overall_progress | round | int }}% complete</h2>
+                    <div class="col-xs-12">
+                    <a href="{{ url_for('project.presenter', short_name=project.short_name)}}" class="btn btn-circle btn-circle-large btn-circle-progress {% if overall_progress < 100 %}glowing-link{% endif %}" data-progress="{{ overall_progress | round | int }}">
+                        <div class="arc arc-q1"></div>
+                        <div class="arc arc-q2"></div>
+                        <div class="arc arc-q3"></div>
+                        <div class="arc arc-q4"></div>
+                        <p>Contribute<br>Now</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <a id="info"></a>
+    <section class="mid-grey pattern-brushed box-shadow-grey-bottom inset-text-grey">
+
+        {% if project.info.attribution %}
+            <p class="attribution"><small>Photo:
+            {% if project.info.attribution_link %}
+                <a href="{{project.info.attribution_link}}" target="_blank">
+            {% endif %}
+            {{project.info.attribution}}
+            {% if project.info.attribution_link %}
+                </a>
+            {% endif %}
+            </small></p>
+        {% endif %}
+
+        <div class="container container-padded">
+            <div class="col-xs-10 col-xs-offset-1">
+
+                {% if overall_progress == 100 %}
+                    <p class="lead-large">
+                        Many thanks to all those who helped us complete this project.
+                    </p>
+                    <p id="volunteers"></p>
+                    <p class="lead-large padding-top-sm">
+                        Special thanks go out to our
+                        <a class="anchor-btn" data-anchor="#top5">most active volunteers</a>
+                        for their extra efforts!
+                    </p>
+                {% else %}
+
+                    {% if project.info.video %}
+                        <div class="row text-center padding-bottom padding-top-sm">
+                            <video class="tutorial-video" controls>
+                                <source src="{{ url_for('uploads.uploaded_file', filename=(project.info.container + '/' + project.info.video))}}" type="video/mp4">
+                                Your browser does not support HTML5 video.
+                            </video>
+                        </div>
+                    {% endif %}
+
+                    {% if project.long_description %}
+                        <div class="description">
+                            {{ project.long_description | e | markdown }}
+                        </div>
+                    {% endif %}
+
+                {% endif %}
+            </div>
+        </div>
+    </section>
+
+
+
+    {% if overall_progress < 100 %}
+    <section>
+        <div class="container container-padded">
+            <div class="col-xs-12 text-center">
+                <div class="row">
+                    <h2>Get involved</h2>
+                    <p>Your contributions will have a direct impact on enabling future reasearch at the British Library.<p>
+                    <div class="row text-center padding-top-xs">
+                        <a href="{{ url_for('project.presenter', short_name=project.short_name)}}" class="btn btn-danger"> Contribute now</a>
+                    </div>
+                    <hr class="padding-bottom-xs">
+                    <a href="#" data-content="Share on Facebook" class="btn-popover btn btn-facebook"
+                       onclick="popUp=window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.libcrowds.com%2Fblplugin%2F{{project.short_name}}',
+                                               'popupwindow', 'scrollbars=yes,width=510,height=620');popUp.focus();return false"
+                                               data-url="http://www.libcrowds.com/blplugin/{{project.short_name}}">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fwww.libcrowds.com%2Fblplugin%2F{{project.short_name}}
+                    &text={{project.description}}&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com%2Fblplugin%2F{{project.short_name}}"
+                            data-content="Share on Twitter" class="btn-popover btn btn-twitter"
+                            data-url="http://www.libcrowds.com/blplugin/{{project.short_name}}">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="#" data-content="Share on Google+" class="btn-popover btn btn-googleplus"
+                    onclick="popUp=window.open('https://plus.google.com/share?url=http%3A%2F%2Fwww.libcrowds.com%2Fblplugin%2F{{project.short_name}}',
+                                               'popupwindow', 'scrollbars=yes,width=510,height=725');popUp.focus();return false"
+                                               data-url="http://www.libcrowds.com/blplugin/{{project.short_name}}">
+                        <i class="fa fa-google"></i>
+                    </a>
+                    <a href="#" data-content="Share on LinkedIn" class="btn-popover btn btn-linkedin"
+                    onclick="popUp=window.open('https://www.linkedin.com/cws/share?url=http%3A%2F%2Fwww.libcrowds.com%2Fblplugin%2F{{project.short_name}}',
+                                               'popupwindow', 'scrollbars=yes,width=510,height=520');popUp.focus();return false"
+                                               data-url="http://www.libcrowds.com/blplugin/{{project.short_name}}">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    {% endif %}
+
+{% else %}
+<div class="container-padded remove-padding-bottom">
+    <section class="white">
+        <div class="container container-padded">
+            <div class="page-header padding-top container">
+                <h1>Sorry! This project does not exist.</h1>
+            </div>
+        </div>
+    </section>
+</div>
+{% endif %}
 <script>
-  window.location.href = "{{ url_for('blplugin.details', short_name = project.short_name) }}";
+$(function(){
+
+    //Provide usernames
+    if ($('#volunteers').length) {
+        $.ajax({
+            type: 'GET',
+            url: '/api/project/{{project.id}}/allusers',
+            success : function(text) {
+                $('#volunteers').html(commaSeperateJson(text) + ' and all of our anonymous volunteers');
+            }
+        });
+    }
+});
+
+function commaSeperateJson(json) {
+    formatted = JSON.stringify(json).replace('[', '').replace(']', ''); //remove brackets
+    formatted = formatted.split('"').join(''); //remove quotes
+    formatted = formatted.split(',').join(', '); //add a space after commas
+    return formatted;
+}
 </script>
- 
-<title>Page Redirection</title>
- 
-If you are not redirected automatically, follow the <a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">link to the new page</a>
+{{ helper.broken_image() }}
+{{ helper.knob() }}
+{% endblock %}
