Replace self-closing tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,9 +95,9 @@
     </div>
 
     <!-- Le javascript -->
-    <script type="text/javascript" src="{{url_for('static', filename='js/scripts.min.js')}}" />
+    <script type="text/javascript" src="{{url_for('static', filename='js/scripts.min.js')}}"></script>
     <script>
-    {% include 'cookies.js' %}
+        {% include 'cookies.js' %}
     </script>
 
     </body>
