--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -84,7 +84,7 @@
     <div class="container container-padded">
         <div class="col-md-11 padding-top-xs padding-bottom-sm">
             <h2>Contact information</h2>
-            <ul>
+            <ul class="no-style">
                 {% if 'pybossa-discourse' in plugins.keys() %}
                 <li>Visit the <a href="{{url_for('discourse.index')}}">LibCrowds Community</a> for more information or to report any issues.</li>
                 {% else %}
