Don't use absolute link

--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -41,7 +41,7 @@
                 diverse collections available at the British Library.
             </p>
             <div class="text-center">
-                <a href="http://www.libcrowds.com/project/category/convert-a-card/" class="btn btn-danger">Get Started</a>
+                <a href="{{url_for('project.index')}}" class="btn btn-danger">Get Started</a>
             </div>
         </div>
     </div>
