Remove deprecated CSS classes

--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -24,7 +24,7 @@
                 </a>
             </fieldset>
         </form>
-        <div class="padding-top">
+        <div class="padding-top-lg">
             <p class="text-center muted">
                 By clicking the <strong>Create Account</strong> button you are agreeing to our <a href={{url_for('help.tos')}}>terms of use</a>.
             </p>
