--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -41,7 +41,7 @@
                 <input type="submit" value="Sign in" class="btn btn-success" />
             </div>
         </form>
-        <div class="padding-top">
+        <div class="padding-top-lg">
             <p class="text-center muted">By clicking the <strong>Sign in</strong> button you are agreeing to our <a href={{url_for('help.tos')}}>terms of use</a>.</p>
         </div>
     </div>
