--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -15,7 +15,7 @@
         {% include "_flash_messages.html" %}
         {% if invite_new_volunteers %}
             <div class="row">
-                <div class="col-xs-12 text-center padding-top">
+                <div class="col-xs-12 text-center padding-top-lg">
                     <h1>Great, you've contributed to all the tasks for this project.</h1>
                     <h2>But this project still needs more volunteers, so please spread the word!</h2>
                     <a href="/"><i class="fa fa-home fa-3x"></i></a>
