--- a/templates/projects/stats.html
+++ b/templates/projects/stats.html
@@ -46,7 +46,7 @@
                             </div>
                         </div>
 
-                        <div class="row padding-bottom">
+                        <div class="row padding-bottom-sm">
                             <div class="col-xs-12">
                                 <div class="white-rounded inset-shadow-white chart">
                                     <h4 class="text-center padding-bottom-sm">Hourly Activity</h4>
