--- a/templates/projects/task_presenter_editor.html
+++ b/templates/projects/task_presenter_editor.html
@@ -34,7 +34,7 @@
                         <div id="code-container">
                         {{ render_field(form.editor)}}
                         </div>
-                        <div id="preview-container" class="container padding-top" hidden>
+                        <div id="preview-container" class="container padding-top-lg" hidden>
                             <iframe id="preview" frameBorder="0" style="height: 500px"></iframe>
                         </div>
                     </fieldset>
