--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -8,7 +8,7 @@
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <div class="container-padded remove-padding-bottom">
     <section class="dark-grey pattern-classy-fabric">
-        <div class="container padding-top">
+        <div class="container padding-top-md">
             <div class="col-xs-10 col-xs-offset-1">
                 <ul class="nav nav-pills">
                     {% for c in categories %}
