Fix vertical centering on footer

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,13 +1,13 @@
 <div class="container">
-    <div class="row center">
+    <div class="row center vcenter hcenter">
 
-        <div class="col-sm-3 col-xs-12 vcenter hcenter footer-col hidden-xs">
+        <div class="col-sm-3 col-xs-12 footer-col hidden-xs">
             <a href="http://labs.bl.uk/" target="_blank">
                 <img class="img-responsive center-block ie-mid-vcenter" src="{{url_for('static', filename='img/bl-logo.png')}}" alt="BL Labs logo">
             </a>
         </div>
 
-        <div class="col-sm-6 vcenter hcenter footer-col">
+        <div class="col-sm-6 footer-col">
         {% if not enforce_privacy %}
             <div class="row ie-vcenter">
                 <ul>
@@ -25,7 +25,7 @@
         {% endif %}
         </div>
 
-        <div class="col-sm-3 vcenter hcenter footer-col hidden-xs">
+        <div class="col-sm-3 footer-col hidden-xs">
             <a href="http://pybossa.com/"  target="_blank">
                 <img class="img-responsive center-block ie-mid-vcenter" src="{{url_for('static', filename='img/pybossa.png')}}"  alt="PyBossa logo">
             </a>
