Add show_label to render field macro

--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -73,9 +73,9 @@
                             <h2>Update your profile</h2>
                             {{ form.id }}
                             {{ form.hidden_tag() }}
-                            {{ form_helper.render_field(form.fullname, visible='true', placeholder="Full name", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
-                            {{ form_helper.render_field(form.name, visible='true', placeholder="Username", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
-                            {{ form_helper.render_field(form.email_addr, visible='true', placeholder="Email", class="form-control", type="email" ) }}
+                            {{ form_helper.render_field(form.fullname, show_label=True, placeholder="Full name", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
+                            {{ form_helper.render_field(form.name, show_label=True, placeholder="Username", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
+                            {{ form_helper.render_field(form.email_addr, show_label=True, placeholder="Email", class="form-control", type="email" ) }}
                             {{ form_helper.render_field_checkbox(form.subscribed, label_text="Subscribe to email notifications") }}
                             {{ form_helper.render_field(form.locale, class="hidden") }}
                             <div class="pull-right form-actions" role="group">
