--- a/templates/projects/update.html
+++ b/templates/projects/update.html
@@ -55,15 +55,15 @@
                   <fieldset>
                     {{ form.hidden_tag() }}
 
-                    {{ render_field(form.name, class="form-control", placeholder="Name", visible='true', required="required", autofocus="autofocus") }}
-                    {{ render_field(form.short_name, class="form-control", placeholder="Short name", visible='true', label_text="Short name:") }}
-                    {{ render_field(form.description, class="form-control", placeholder="Short description", visible='true', required="required", pattern=".{0,255}", title="Must be a maximum of 255 characters") }}
-                    {{ render_field(form.long_description, rows="13", placeholder="Explain the project (use Markdown)!", class="form-control", required="required", visible='true') }}
-                    {{ render_field(form.category_id, class="form-control", visible='true') }}
-                    {{ render_field(form.allow_anonymous_contributors, class="form-control", visible='true') }}
+                    {{ render_field(form.name, class="form-control", placeholder="Name", show_label=True, required="required", autofocus="autofocus") }}
+                    {{ render_field(form.short_name, class="form-control", placeholder="Short name", show_label=True, label_text="Short name:") }}
+                    {{ render_field(form.description, class="form-control", placeholder="Short description", show_label=True, required="required", pattern=".{0,255}", title="Must be a maximum of 255 characters") }}
+                    {{ render_field(form.long_description, rows="13", placeholder="Explain the project (use Markdown)!", class="form-control", required="required", show_label=True) }}
+                    {{ render_field(form.category_id, class="form-control", show_label=True) }}
+                    {{ render_field(form.allow_anonymous_contributors, class="form-control", show_label=True) }}
                     {{ render_field(form.protect, id='protect') }}
-                    <div id='password'>{{ render_field(form.password, class="form-control", visible='true') }}</div>
-                    {{ render_field(form.webhook, class="form-control", visible='true') }}
+                    <div id='password'>{{ render_field(form.password, class="form-control", show_label=True) }}</div>
+                    {{ render_field(form.webhook, class="form-control", show_label=True) }}
                     <div role="group" class="pull-right">
                         <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-default">Cancel</a>
                       <button type="submit" name="btn" value="Save the changes" class="btn btn-danger">Save</button>
