--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -1,6 +1,6 @@
-{% macro render_field(field, addon, prepend, tooltip, label_text) %}
+{% macro render_field(field, addon, prepend, tooltip, label_text, show_label='false') %}
 <div class="form-group {% if field.errors %} error {% endif %}">
-    {{ render_label(field, tooltip, label_text) }}
+    {{ render_label(field, tooltip, label_text, show_label) }}
     {% if addon %}
     <div class="input-group">
         {% if prepend %}
@@ -26,16 +26,32 @@
 
 {% macro render_label(field, tooltip, text) %}
 {% if tooltip and text %}
-{{ field.label(class="control-label", style='width:148px', text=text) }}
-<div style="float:left; padding-top:5px;margin-bottom:5px;font-size:18px;">
-    &nbsp;<i rel="tooltip" data-title="{{tooltip|safe}}" class="fa fa-question-circle"></i></div>
-{% elif tooltip and not text %}
-{{ field.label(class="control-label", style='width:148px') }}
-<div style="float:left; padding-top:5px;margin-bottom:5px;font-size:18px;">
-    &nbsp;<i rel="tooltip" data-title="{{tooltip|safe}}" class="fa fa-question-circle"></i></div>
-{% elif not tooltip and text %}
-{{ field.label(class="control-label", text=text) }}
-{% else %}
-{{ field.label(class="control-label") }}
+        {% if show_label == 'false' %}
+            {{ field.label(class="sr-only", style='width:148px', text=text) }}
+        {% else %}
+            {{ field.label(class="control-label", style='width:148px', text=text) }}
+        {% endif %}
+    <div style="float:left; padding-top:5px;margin-bottom:5px;font-size:18px;">
+        &nbsp;<i rel="tooltip" data-title="{{tooltip|safe}}" class="fa fa-question-circle"></i></div>
+    {% elif tooltip and not text %}
+        {% if show_label == 'false' %}
+            {{ field.label(class="sr-only", style='width:148px') }}
+        {% else %}
+            {{ field.label(class="control-label", style='width:148px') }}
+        {% endif %}
+    <div style="float:left; padding-top:5px;margin-bottom:5px;font-size:18px;">
+        &nbsp;<i rel="tooltip" data-title="{{tooltip|safe}}" class="fa fa-question-circle"></i></div>
+    {% elif not tooltip and text %}
+        {% if show_label == 'false' %}
+            {{ field.label(class="sr-only", text=text) }}
+        {% else %}
+            {{ field.label(class="control-label", text=text) }}
+        {% endif %}
+    {% else %}
+    {% if show_label == 'false' %}
+        {{ field.label(class="sr-only") }}
+    {% else %}
+        {{ field.label(class="control-label") }}
+    {% endif %}
 {% endif %}
 {% endmacro %}
