--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -48,7 +48,7 @@
     <hr>
     <div class="row padding-top-sm">
         <div class="col-xs-12 text-center">
-            <a href="{{ url_for('account.register') }}" class="btn btn-primary"><i class="fa-user-plus"></i> Create a new account</a>
+            <a href="{{ url_for('account.register') }}" class="btn btn-primary"><i class="fa fa-user-plus"></i> Create a new account</a>
         </div>
     </div>
 </div>
