--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -49,7 +49,7 @@
         {% else %}
         <div class="col-xs-12 text-center">
             <div class="row">
-                <h2>Get involved</h2>
+                <h2><a href="{{url_for('project.index')}}">Get involved</a></h2>
                 <p>Your contributions will have a direct impact on enabling future reasearch at the British Library.<p>
             </div>
         </div>
