--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -6,15 +6,15 @@
 
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
         {% include "_flash_messages.html" %}
-        <h4 class="text-center">Create an account</h4>
+        <h2 class="text-center">Create an account</h2>
         <form method="post" role="form" action="{{ url_for('account.register') }}">
             {{ form.hidden_tag() }}
             <fieldset>
-                {{ render_field(form.fullname, placeholder="Full Name", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters", autofocus="autofocus") }}
-                {{ render_field(form.name, placeholder="Username", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters") }}
-                {{ render_field(form.email_addr, placeholder="Email", class="form-control", type="email", required="required") }}
-                {{ render_field(form.password, placeholder="Password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
-                {{ render_field(form.confirm, placeholder="Confirm Password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
+                {{ render_field(form.fullname, show_label=True, placeholder="Enter your name", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters", autofocus="autofocus") }}
+                {{ render_field(form.name, show_label=True, placeholder="Choose a username", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters") }}
+                {{ render_field(form.email_addr, show_label=True, placeholder="Enter your email address", class="form-control", type="email", required="required") }}
+                {{ render_field(form.password, show_label=True, placeholder="Choose a password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
+                {{ render_field(form.confirm, show_label=True, placeholder="Confirm your password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
                 <div class="pull-right" role="group">
                     <input type="reset" value="Clear" class="btn btn-default" />
                     <input type="submit" value="Create Account" class="btn btn-success" />
