Tiny wording update

--- a/templates/account/account_validation.html
+++ b/templates/account/account_validation.html
@@ -10,7 +10,7 @@
             <div class="col-sm-6 col-sm-offset-3">
                 <div class="white-panel inset-shadow-white">
                     <h2>Great, just one more step!</h2>
-                    <p>In order to confirm your identity, we've sent a link to the email address you just provided, please click on it to finish creating your {{ config.BRAND }} account.</p>
+                    <p>In order to confirm your identity we've sent a link to the email address provided, please click on it to finish creating your {{ config.BRAND }} account.</p>
                     <p>If you have not received the email in the next couple of minutes please check your spam folder. If it's not there drop us an email at <a href="mailto:issues@libcrowds.com">issues@libcrowds.com</a>.</p>
                     <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-inverse">
                     <i class="fa fa-home"></i> Home</a>
