--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -55,18 +55,16 @@
                 LibCrowds is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source Python framework for the creation of
                 crowdsourcing projects. PyBossa is written in Python and uses the <a href="http://flask.pocoo.org/">Flask</a> micro-framework. Each
                 project on the platform is written in a combination of HTML, CSS and Javascript. {% if 'pybossa-discourse' in plugins.keys() %} The
-                community forum is powered by <a href="https://www.discourse.org/">Discourse</a>.{% endif %}
-            </p>
-            <p>
-                The <a href="https://github.com/LibCrowds/libcrowds-pybossa-theme" target="_blank">LibCrowds theme</a> and any
-                plugins that provide additional functionality for the platform, are open-souce and available on GitHub.
+                community forum is powered by <a href="https://www.discourse.org/">Discourse</a>.{% endif %} The
+				<a href="https://github.com/LibCrowds/libcrowds-pybossa-theme" target="_blank">LibCrowds theme</a> and any plugins developed to
+				provide additional functionality are open-souce and available on GitHub.
             </p>
             <p>
                 {% if plugins %}
                     LibCrowds is currently running the following plugins:
-                    <ul>
+                    <ul class="no-style">
                     {% for p in plugins.values() %}
-                        <li><a href="{{ p.website }}">{{ p.name }}, v{{ p.version }}</a>: {{ p.description }}</li>
+                        <li><a href="{{ p.website }}"><strong>{{ p.name }}</a> (v{{ p.version }}):<strong> {{ p.description }}</li>
                     {% endfor %}
                     </ul>
                 {% endif %}
