--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% import "projects/_helpers.html" as helper %}
 {% import "account/_helpers.html" as account_helper %}
+
 {% block content %}
 {% include "_flash_messages_floating.html" %}
 <div class="splash" id="home-splash">
@@ -60,11 +61,11 @@
     </div>
 </div>
 
-{% if top_users %}
+
 <section id="top_users">
     <div class="container container-padded">
-        <div class="col-xs-12">
-
+        {% if top_users %}
+            <div class="col-xs-12">
             <div class="row text-center">
                 <h2>Most Active Volunteers</h2>
             </div>
@@ -86,43 +87,13 @@
             {% endfor %}
             </ul>
         </div>
-
-        <div class="col-xs-12 text-center padding-top-sm text-center">
+        <div class="col-xs-12 text-center padding-top-sm">
             <a class="btn btn-danger" href="{{url_for('leaderboard.index')}}">View Leaderboard</a>
             <hr class="padding-bottom-xs">
-
-            <!-- Social media-->
-            <a data-content="Share on Facebook" class="btn btn-facebook btn-popover"
-               onclick="popUp=window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.libcrowds.com',
-                                       'popupwindow', 'scrollbars=yes,width=510,height=620');popUp.focus();return false"
-                                       data-url="http://www.libcrowds.com">
-                <i class="fa fa-facebook"></i>
-            </a>
-
-            <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fwww.libcrowds.com
-            &text=Participate%20in%20crowdsourcing%20projects%20and%20help%20improve%20access%20to%20the%20collections%20of%20the%20British%20Library.&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com"
-               data-content="Share on Twitter" class="btn btn-twitter btn-popover"
-               data-url="http://www.libcrowds.com">
-                <i class="fa fa-twitter"></i>
-            </a>
-            <a href="#" data-content="Share on Google+" class="btn btn-googleplus btn-popover"
-            onclick="popUp=window.open('https://plus.google.com/share?url=http%3A%2F%2Fwww.libcrowds.com',
-                                       'popupwindow', 'scrollbars=yes,width=510,height=725');popUp.focus();return false"
-                                       data-url="http://www.libcrowds.com">
-                <i class="fa fa-google"></i>
-            </a>
-            <a href="#" data-content="Share on LinkedIn" class="btn btn-linkedin btn-popover"
-            onclick="popUp=window.open('https://www.linkedin.com/cws/share?url=http%3A%2F%2Fwww.libcrowds.com',
-                                       'popupwindow', 'scrollbars=yes,width=510,height=520');popUp.focus();return false"
-                                       data-url="http://www.libcrowds.com">
-                <i class="fa fa-linkedin"></i>
-            </a>
-            <div class="row">
-                <span class="col-xs-12" id="total-share-count" data-count="0"></span>
-            </div>
         </div>
+        {% endif %}
+        {{ helper.render_social_media_buttons("www.libcrowds.com", "Come and have a go at the British Library's crowdsourcing platform!") }}
     </div>
 </section>
-{% endif %}
 {{ helper.broken_image() }}
 {% endblock %}
