--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -324,3 +324,33 @@ function imgError(image) {
 {{url_for('static', filename='img/placeholder.project.png')}}"
 {% endif %}
 {% endmacro %}
+
+{% macro render_social_media_buttons(share_url, tweet) %}
+<div class="col-xs-12 text-center">
+    <a data-content="Share on Facebook" class="btn btn-facebook btn-popover"
+       onclick="popUp=window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2F{{ share_url }}',
+                               'popupwindow', 'scrollbars=yes,width=510,height=620');popUp.focus();return false"
+                               data-url="{{ share_url }}">
+        <i class="fa fa-facebook"></i>
+    </a>
+
+    <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2F{{ share_url }}&text={{ tweet }}
+    &tw_p=tweetbutton&url=http%3A%2F%2F{{ share_url }}"
+       data-content="Share on Twitter" class="btn btn-twitter btn-popover"
+       data-url="{{ share_url }}">
+        <i class="fa fa-twitter"></i>
+    </a>
+    <a href="#" data-content="Share on Google+" class="btn btn-googleplus btn-popover"
+    onclick="popUp=window.open('https://plus.google.com/share?url=http%3A%2F%2F{{ share_url }}',
+                               'popupwindow', 'scrollbars=yes,width=510,height=725');popUp.focus();return false"
+                               data-url="{{ share_url }}">
+        <i class="fa fa-google"></i>
+    </a>
+    <a href="#" data-content="Share on LinkedIn" class="btn btn-linkedin btn-popover"
+    onclick="popUp=window.open('https://www.linkedin.com/cws/share?url=http%3A%2F%2F{{ share_url }}',
+                               'popupwindow', 'scrollbars=yes,width=510,height=520');popUp.focus();return false"
+                               data-url="{{ share_url }}">
+        <i class="fa fa-linkedin"></i>
+    </a>
+</div>
+{% endmacro %}
