--- a/templates/admin/update_category.html
+++ b/templates/admin/update_category.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% set active_page = "admin" %}
-{% from "admin/_helpers.html" import render_local_nav %}
+{% set active_link = "catagories" %}
+{% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
-{{ render_local_nav(current_user, "catagories") }}
+{{ render_admin_local_nav(current_user, active_link) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
